--- a/news feed/html/styles/feed_style.css
+++ b/news feed/html/styles/feed_style.css
@@ -63,7 +63,7 @@ body
 	margin:4px;
 	background-color:#D7D8D9;
 	height:250px;
-	overflow:scroll;
+	overflow-y: scroll;
 	}
 .friend-name
 	{
@@ -89,7 +89,7 @@ body
 	margin:4px;
 	background-color:#D7D8D9;
 	height:250px;
-	overflow:scroll;
+	overflow-y: scroll;
 	}
 .umk-name
 	{
@@ -118,7 +118,7 @@ body
 	{
 	margin:4px;
 	height:540px;
-	overflow:scroll;
+	overflow-y: scroll;
 	display: flex;
 	flex-direction:column;
 	}
