--- a/news feed/src/assets/sass/feed_style.sass
+++ b/news feed/src/assets/sass/feed_style.sass
@@ -1,21 +1,21 @@
 /*only_top*/
 .shapka
-  padding-left: 300px
-  padding-right: 300px
+  padding: 15px 300px
   background-color: #707070
   display:  flex
   justify-content:  space-between
+  align-items: center
 
 .logo
   color:  white
   font-weight: bold
   font-size: 300%
-  font-family: Helvetica
 
 .user_name
   color:  white
   font-size: 150%
-  font-family: Helvetica
+  vertical-align: middle
+  display: inline-block
 
 .log_out
   margin:  10px
@@ -30,49 +30,41 @@
 
 /*people*/
 .people
-  margin: 8px
   display:  flex
   flex-direction: column
   width: 40%
 
-.friend_list
-  margin-top: 8px
-  margin-bottom: 8px
+.friend_list, .umk_list, .news
+  margin: 8px 24px
+  padding: 10px 16px
   background-color: rgba(64,64,64, .3)
   display:  flex
   flex-direction: column
+  border-radius: 6px
 
-.friend-text
-  margin: 4px
+
+.friend-text, .umk-text
+  margin: 4px 4px 8px 4px
   text-align: center
 
-.fr_menu
-  margin: 4px
+.fr_menu, .umk_menu
+  padding: 5px
   background-color: #D7D8D9
+  border: 1px solid black
+  border-radius: 6px
   height: 250px
-  overflow: scroll
+  overflow: hidden
+  overflow-y: auto
 
-.friend-name
+.friend
   margin: 3px
   display:  flex
   justify-content:  space-between
-
-.umk_list
-  margin-top: 8px
-  margin-bottom: 8px
-  background-color: rgba(64,64,64, .3)
-  display:  flex
-  flex-direction: column
-
-.umk-text
-  margin: 4px
-  text-align: center
-
-.umk_menu
-  margin: 4px
-  background-color: #D7D8D9
-  height: 250px
-  overflow: scroll
+  transition: all 0.4s
+  padding: 5px
+  border-radius: 10px
+  &:hover
+    background-color: rgba(157,158,158, .6)
 
 .umk-name
   margin: 3px
@@ -81,13 +73,7 @@
 
 /*news*/
 .news
-  margin: 8px
-  margin-top: 16px
-  margin-bottom: 16px
   width: 60%
-  background-color: rgba(64,64,64, .3)
-  display:  flex
-  flex-direction: column
 
 .news-text
   display:  flex
@@ -97,7 +83,6 @@
 .news_menu
   margin: 4px
   height: 540px
-  overflow: scroll
   display:  flex
   flex-direction: column
 
@@ -113,3 +98,25 @@
 
 .bottom
   padding: 10px
+
+.add-button
+  padding: 5px 25px
+  color: white
+  border-radius: 14px
+  border: none
+  background-color: darkgreen
+  &:hover
+    background-color: lighten(darkgreen, 10%)
+
+.remove-btn
+  padding: 5px 25px
+  color: white
+  border-radius: 14px
+  border: none
+  background-color: darkred
+  &:hover
+    background-color: lighten(darkred, 10%)
+
+.nick
+  display: inline-block
+  vertical-align: middle
